--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -144,18 +144,18 @@
                                     required>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <label for="correoCliente" class="form-label">Correo</label>
-                                <input id="correoCliente" type="text" name="correoCliente" class="form-control"
+                                <label for="correoCliente" class="form-label">Correo electrónico</label>
+                                <input id="correoCliente" type="email" name="correoCliente" class="form-control"
                                     required>
                             </div>
                             <div class="col-sm-12 col-md-6">
                                 <label for="fechaDeNacimientoCliente" class="form-label">Fecha de nacimiento</label>
-                                <input id="fechaDeNacimientoCliente" type="text" name="fechaDeNacimientoCliente"
+                                <input id="fechaDeNacimientoCliente" type="date" name="fechaDeNacimientoCliente"
                                     class="form-control" required>
                             </div>
                             <div class="col-sm-12 col-md-6">
                                 <label for="fechaDeRegistroCliente" class="form-label">Fecha de registro</label>
-                                <input id="fechaDeRegistroCliente" type="text" name="fechaDeRegistroCliente"
+                                <input id="fechaDeRegistroCliente" type="date" name="fechaDeRegistroCliente"
                                     class="form-control" required>
                             </div>
                             <div class="col-sm-12 col-md-6">
@@ -172,7 +172,7 @@
                                 Cancelar
                             </button>
                             <button type="button" id="actualizarBtn"
-                                class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
                                 onclick="botonActualizar()">
                                 Actualizar
                             </button>
