--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -106,7 +106,7 @@
                                                         <div class="col-lg-12 container mt-3 d-flex flex-wrap m-3 justify-content-center align-items-center"
                                                             id="detallesDelRepartidor">
                                                             <!--Info del repartidor y cliente-->
-                                                            <div class="container col-lg-12 d-flex justify-content-center mt-4 mb-2"
+                                                            <div class="container col-lg-12 mt-4 mb-2"
                                                                 id="infoDeRepartidorDelApartadoDelRepartidor">
                                                                 <div class="col-lg-3">
                                                                     <img src="../../recursos/imagenes/icons/iconodeusuarioblancoyfondoazul.svg"
@@ -389,7 +389,7 @@
                         aria-labelledby="pedidos-tab">
                         <div class="container mt-5">
                             <div class="row g-3">
-                                <div class="col-lg-12">
+                                <div class="col-lg-12 contenedorTotal">
                                     <!-- Formulario de búsqueda -->
                                     <form class="ms-2 col-lg-10 col-md-10 col mt-3 mb-4" id="searchForm">
                                         <div class="row col-lg-12">
@@ -443,8 +443,7 @@
                                                             <div class="container d-none col-lg-12 d-flex justify-content-center mt-4 mb-2"
                                                                 id="infoDeRepartidor">
                                                                 <div class="col-lg-3">
-                                                                    <img src="../../recursos/imagenes/icons/iconodeusuarioblancoyfondoazul.svg"
-                                                                        class="img-fluid" alt="Icono de usuario">
+                                                                    <img src="../../recursos/imagenes/icons/iconodeusuarioblancoyfondoazul.svg" width="200px" height="200px" alt="Icono de usuario">
                                                                 </div>
                                                                 <div class="col-lg-9">
                                                                     <h6 class="titillium-web" id="nombreRepartidor">
