--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -183,14 +183,13 @@
                 aria-labelledby="modalTitle" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="modalTitle"></h1>
-                        </div>
+                        <!-- Encabezado del modal -->
+                    <div class="modal-header d-flex justify-content-center">
+                        <h1 class="modal-title fs-5 text-center" id="modalTitle"></h1>
+                    </div>
                         <!-- Formulario para crear o actualizar un registro -->
                         <form id="updateFrom" name="updateFrom">
                             <div class="modal-body row g-3">
-                                <!-- Campo oculto para asignar el id del registro al momento de modificar
-                            <input type="hidden" id="idTrabajador" name="IdTrabajador"> -->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="nombreTrabajador" class="form-label">Nombres</label>
                                     <input id="nombreTrabajador" type="text" name="nombreTrabajador"
@@ -218,12 +217,12 @@
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="fechanTrabajador" class="form-label">Fecha de nacimiento</label>
-                                    <input id="fechanTrabajador" type="text" name="fechanTrabajador"
+                                    <input id="fechanTrabajador" type="date" name="fechanTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="fecharTrabajador" class="form-label">Fecha de registro</label>
-                                    <input id="fecharTrabajador" type="text" name="fecharTrabajador"
+                                    <input id="fecharTrabajador" type="date" name="fecharTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
                                 <div class="col-sm-12 col-md-6">
@@ -238,7 +237,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="contraTrabajador" class="form-label">Contraseña</label>
-                                    <input id="contraTrabajador" type="text" name="contraTrabajador"
+                                    <input id="contraTrabajador" type="password" name="contraTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
                             </div>
