Cambios de index, trabajador y detalles y pedidos

--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -28,7 +28,7 @@
     <header id="header"></header>
     <div id="slide"></div>
     <main id="mainContent">
-         <!-- Contenido principal de la página -->
+        <!-- Contenido principal de la página -->
         <div class="ContenedorT" id="ContenedorMain">
             <!-- Contenedor principal con título -->
             <div class="ContenedorTitulo position-relative mb-5">
@@ -63,7 +63,6 @@
                 </a>
             </div>
         </div>
-
         <!--Contenedor del div de visualizacion toda la informacion del usuario estando oculto por el momento-->
         <div class="d-none" id="formDiv">
             <div class="contenedorTotalForm d-flex flex-column justify-content-center align-items-center flex-wrap p-5">
@@ -88,50 +87,48 @@
                         <!--Formulario de nombre-->
                         <div class="col-md-6">
                             <label for="nombreInput" class="form-label">Nombres</label>
-                            <input type="text" class="form-control" id="nombreInput" required readonly
-                            value="Emiliano">
+                            <input type="text" class="form-control" id="nombreInput" required readonly value="Emiliano">
                         </div>
                         <!--Formulario de apellido-->
                         <div class="col-md-6">
                             <label for="apellidosInput" class="form-label ">Apellidos</label>
                             <input type="text" class="form-control" id="apellidosInput" required readonly
-                            value="Hernandéz">
+                                value="Hernandéz">
                         </div>
                         <!--Formulario de DUI-->
                         <div class="col-md-6 mt-3">
                             <label for="duiInput" class="form-label ">DUI</label>
-                            <input type="text" class="form-control" id="duiInput" required readonly
-                            value="12345678-9">
+                            <input type="text" class="form-control" id="duiInput" required readonly value="12345678-9">
                         </div>
                         <!--Formulario de telefono-->
                         <div class="col-md-6 mt-3">
                             <label for="telefonoInput" class="form-label ">Teléfono</label>
                             <input type="text" class="form-control" id="telefonoInput" required readonly
-                            value="1234-5678">
+                                value="1234-5678">
                         </div>
                         <!--Formulario de correo electronico-->
                         <div class="col-md-6 mt-3">
                             <label for="correoInput" class="form-label ">Correo Electrónico</label>
                             <input type="text" class="form-control" id="correoInput" required readonly
-                            value="emilianito@gmail.com.sv">
+                                value="emilianito@gmail.com.sv">
                         </div>
                         <!--Formulario de fecha de nacimento-->
                         <div class="col-md-6 mt-3">
                             <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" id="fechanInput" 
-                            required readonly value="2001-07-07">
+                            <input type="date" class="form-control" id="fechanInput" required readonly
+                                value="2001-07-07">
                         </div>
                         <!--Formulario de contraseña-->
                         <div class="col-md-6 mt-3">
                             <label for="contraInput" class="form-label ">Contraseña</label>
                             <input type="password" class="form-control" id="contraInput" required readonly
-                            value="**********">
+                                value="**********">
                         </div>
                         <!--Formulario de confirmar contraseña-->
                         <div class="col-md-6 mt-3">
                             <label for="contraCInput" class="form-label ">Confirmar Contraseña</label>
                             <input type="password" class="form-control" id="contraCInput" required readonly
-                            value="**********">
+                                value="**********">
                         </div>
                         <!--contenedores de los botones-->
                         <div class="contenedorBotones2">
