--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -103,17 +103,17 @@
                                                     data-bs-parent="#detalleInformacion">
                                                     <!--Contenedor del cuerpo-->
                                                     <div id="contenedorDelAcordionSoloHeaderAndBody">
-                                                        <div class="col-lg-12 container mt-3 d-flex flex-wrap m-3 justify-content-center align-items-center"
+                                                        <div class="col-lg-12 container mt-3 d-flex flex-wrap m-3 justify-content-center align-items-cente flex-wrap"
                                                             id="detallesDelRepartidor">
                                                             <!--Info del repartidor y cliente-->
-                                                            <div class="container col-lg-12 mt-4 mb-2"
+                                                            <div class="container mt-4 mb-2"
                                                                 id="infoDeRepartidorDelApartadoDelRepartidor">
-                                                                <div class="col-lg-3">
+                                                                <div class="col-lg-3 me-2 img1">
                                                                     <img src="../../recursos/imagenes/icons/iconodeusuarioblancoyfondoazul.svg"
                                                                         class="img-fluid" alt="Icono de usuario">
                                                                 </div>
-                                                                <div class="col-lg-9">
-                                                                    <h6 class="titillium-web"
+                                                                <div class="col-lg-4 d-flex flex-column flex-wrap">
+                                                                    <h6 class="titillium-web text-wrap"
                                                                         id="idRepartidorApartadoRepartidor">
                                                                         <b>ID del repartidor:</b> 372632
                                                                     </h6>
