--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -69,14 +69,19 @@
                 <!--Contenedor de la informacion del usuario, nombres y correo-->
                 <div class="contenedorCabecera d-flex flex-row align-items-center flex-wrap mb-2">
                     <div class="contenedorImg">
+                        <!-- Contenedor para la imagen del usuario -->
                         <img src="/recursos/imagenes/icons/Account.svg" width="150px" height="150px">
                     </div>
                     <div class="contenedorInfo d-flex flex-column ms-4">
+                        <!-- Contenedor de información del usuario -->
                         <div class="contenedorNombre">
+                            <!-- Contenedor para el nombre del usuario -->
                             <h3 class="titillium-web-regular" id="nombreDeUsuario"> Emiliano Hernandez</h3>
                         </div>
                         <div class="contenedorCorreo position-relative">
+                            <!-- Contenedor para la dirección de correo del usuario -->
                             <h6 class="titillium-web-extralight" id="correoDeUsuario">emilianito@gmail.com.sv</h6>
+                            <!-- Línea decorativa debajo del correo -->
                             <div class="linea1"></div>
                         </div>
                     </div>
