--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -25,26 +25,35 @@
 </head>
 
 <body>
+    <!-- Encabezado de la página -->
     <header id="header"></header>
+    <!-- Contenedor lateral, probablemente para un menú o barra lateral -->
     <div id="slide"></div>
+    <!-- Área principal de contenido -->
     <main id="mainContent">
         <div class="ContenedorT">
+            <!-- Contenedor principal del contenido -->
             <div class="ItemsContenedorMain shadow-lg">
+                <!-- Contenedor para el saludo o título principal -->
                 <div class="ContenedorSaludo mb-3">
                     <div id="mainTitle" class="text40 "></div>
                 </div>
+                <!-- Contenedor para la gráfica de ventas -->
                 <div class="ContenedorGrafica row">
                     <div class="col-sm-12 col-md-12 col-lg-12">
-                        <!-- Se muestra un gráfico de ventas-->
+                        <!-- Se muestra un gráfico de ventas -->
                         <canvas id="chart1"></canvas>
                     </div>
                 </div>
-                <!-- Importación de la librería para generar los gráficos. Para más información https://www.chartjs.org/ -->
+                <!-- Importación de la librería Chart.js para generar gráficos -->
                 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
             </div>
         </div>
     </main>
+
+    <!-- Pie de página -->
     <footer id="footer"></footer>
+
 
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
