--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -116,8 +116,8 @@
                                     <div class="contenedorBotones2">
                                         <button type="button" onclick="returnBack()"
                                             class="btn btn2 btn-primary ms-2 shadow text18 titillium-web-regular">Cancelar</button>
-                                        <button class="btn btn3 btn-primary shadow ms-4 text18 titillium-web-regular" onclick="addSave()"
-                                            type="submit">Agregar</button>
+                                        <button class="btn btn3 btn-primary shadow ms-4 text18 titillium-web-regular"
+                                            onclick="addSave()" type="submit">Agregar</button>
                                     </div>
                                 </form>
                             </div>
@@ -184,70 +184,85 @@
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
                         <!-- Encabezado del modal -->
-                    <div class="modal-header d-flex justify-content-center">
-                        <h1 class="modal-title fs-5 text-center" id="modalTitle"></h1>
-                    </div>
+                        <div class="modal-header d-flex justify-content-center">
+                            <h1 class="modal-title fs-5 text-center" id="modalTitle"></h1>
+                        </div>
                         <!-- Formulario para crear o actualizar un registro -->
                         <form id="updateFrom" name="updateFrom">
+                            <!-- Cuerpo del modal con un formulario en formato de rejilla (grid) -->
                             <div class="modal-body row g-3">
+                                <!--Campo del nombre del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="nombreTrabajador" class="form-label">Nombres</label>
                                     <input id="nombreTrabajador" type="text" name="nombreTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del apellidos del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="apellidosTrabajador" class="form-label">Apellidos</label>
                                     <input id="apellidosTrabajador" type="text" name="apellidosTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del DUI del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="duiTrabajador" class="form-label">DUI</label>
                                     <input id="duiTrabajador" type="text" name="duiTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del teléfono del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="telefonoTrabajador" class="form-label">Teléfono</label>
                                     <input id="telefonoTrabajador" type="text" name="telefonoTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del correo electrónico del trabajador-->
                                 <div class="col-sm-12 col-md-6">
-                                    <label for="correoTrabajador" class="form-label">Correo</label>
+                                    <label for="correoTrabajador" class="form-label">Correo electrónico</label>
                                     <input id="correoTrabajador" type="text" name="correoTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del fecha de nacimietno del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="fechanTrabajador" class="form-label">Fecha de nacimiento</label>
                                     <input id="fechanTrabajador" type="date" name="fechanTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del fecha de registro del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="fecharTrabajador" class="form-label">Fecha de registro</label>
                                     <input id="fecharTrabajador" type="date" name="fecharTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del estado del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="estadoTrabajador" class="form-label">Estado</label>
                                     <input id="estadoTrabajador" type="text" name="estadoTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del nivel del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="nivelTrabajador" class="form-label">Nivel</label>
                                     <input id="nivelTrabajador" type="text" name="nivelTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
+                                <!--Campo del contraseña del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="contraTrabajador" class="form-label">Contraseña</label>
                                     <input id="contraTrabajador" type="password" name="contraTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
                             </div>
+                            <!-- Pie de página del modal con margen superior -->
                             <div class="modal-footer mt-5">
+                                <!-- Contenedor de botones dentro del pie de página -->
                                 <div class="contenedorBotones3">
+                                    <!-- Botón "Cancelar" -->
                                     <button type="button" id="cancelarBtn"
                                         class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
                                         onclick="botonCancelar()">
                                         Cancelar
                                     </button>
+                                    <!-- Botón "Actualizar" -->
                                     <button type="button" id="actualizarBtn"
                                         class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
                                         onclick="botonActualizar()">
